tests/runnable/test_10_op_prec_2.ul
// test 10 : Tests operator precedence 2
// Parser / Lexer Valid: Yes

int main()
{
    return 4 * 2 + 3;
    // random comment
}