tests/invalid/test_31_missing_brackets.ul
// test 31 : The most bare, valid program.
// Parser / Lexer Valid: Yes

int main()
    return 3;